2024-12-14  Bruno Haible  <bruno@clisp.org>

	Add transliteration of Emojis.
	Suggested by Colin Leroy-Mira <colin@colino.net> in
	<https://savannah.gnu.org/bugs/index.php?64046>.
	* lib/translit.def: Add transliterations from glibc's fix of
	<https://sourceware.org/bugzilla/show_bug.cgi?id=30649>.
	* NEWS: Mention it.

2024-12-14  Bruno Haible  <bruno@clisp.org>

	Improve man page.
	* man/iconv.3: Move 4th case to be the 2nd case. Add a NOTES section,
	based on the Linux man-pages project's iconv.3 page.

2024-12-13  Bruno Haible  <bruno@clisp.org>

	Distinguish byte-order state and shift-state.
	Reported by Tomas Kalibera <tomas.kalibera@gmail.com> in
	<https://lists.gnu.org/archive/html/bug-gnu-libiconv/2024-12/msg00000.html>.
	* lib/converters.h (struct conv_struct): Add field 'ibyteorder'.
	* lib/iconv_open2.h: Initialize the ibyteorder field.
	* lib/ucs2.h (ucs2_mbtowc): Use the ibyteorder field instead of the
	istate field.
	* lib/ucs4.h (ucs4_mbtowc): Likewise.
	* lib/utf16.h (utf16_mbtowc): Likewise.
	* lib/utf32.h (utf32_mbtowc): Likewise.
	* tests/test-bom-state.c: New file.
	* tests/Makefile.in (check): Run test-bom-state.
	(test-bom-state, test-bom-state.@OBJEXT@): New targets.
	(clean): Remove test-bom-state.
	(SOURCE_FILES): Add test-bom-state.c.
	* NEWS: Mention the change.

2024-11-22  Bruno Haible  <bruno@clisp.org>

	Switch to libtool 2.5.4.
	* m4/libtool.m4: Update from libtool-2.5.4, with modifications:
	2008-04-06  Bruno Haible  <bruno@clisp.org>
		* m4/libtool.m4 (LT_INIT): When setting LIBTOOL, use
		CONFIG_SHELL; don't assume that the Makefile.in will set SHELL
		to ${CONFIG_SHELL}.
	* m4/ltversion.m4: Likewise.
	* build-aux/ltmain.sh: Update from libtool-2.5.4, with modifications:
	2017-07-15  Bruno Haible  <bruno@clisp.org>
		Allow building statically linked binaries, through
		LDFLAGS="-static". Apply patch from
		<https://lists.gnu.org/archive/html/bug-libtool/2017-07/msg00000.html>.