@@ -32,21 +32,16 @@ extern @DLL_VARIABLE@ int _libiconv_version; /* Likewise */
 #endif
 
 /* We would like to #include any system header file which could define
-   iconv_t, 1. in order to eliminate the risk that the user gets compilation
+   iconv_t, in order to eliminate the risk that the user gets compilation
    errors because some other system header file includes /usr/include/iconv.h
-   which defines iconv_t or declares iconv after this file, 2. when compiling
-   for LIBICONV_PLUG, we need the proper iconv_t type in order to produce
-   binary compatible code.
+   which defines iconv_t or declares iconv after this file.
    But gcc's #include_next is not portable. Thus, once libiconv's iconv.h
    has been installed in /usr/local/include, there is no way any more to
    include the original /usr/include/iconv.h. We simply have to get away
    without it.
-   Ad 1. The risk that a system header file does
+   The risk that a system header file does
    #include "iconv.h"  or  #include_next "iconv.h"
-   is small. They all do #include <iconv.h>.
-   Ad 2. The iconv_t type is a pointer type in all cases I have seen. (It
-   has to be a scalar type because (iconv_t)(-1) is a possible return value
-   from iconv_open().) */
+   is small. They all do #include <iconv.h>. */
 
 /* Define iconv_t ourselves. */
 #undef iconv_t
@@ -74,9 +69,7 @@ extern "C" {
 
 /* Allocates descriptor for code conversion from encoding ‘fromcode’ to
    encoding ‘tocode’. */
-#ifndef LIBICONV_PLUG
 #define iconv_open libiconv_open
-#endif
 extern iconv_t iconv_open (const char* tocode, const char* fromcode);
 
 /* Converts, using conversion descriptor ‘cd’, at most ‘*inbytesleft’ bytes
@@ -84,15 +77,11 @@ extern iconv_t iconv_open (const char* tocode, const char* fromcode);
    ‘*outbuf’.
    Decrements ‘*inbytesleft’ and increments ‘*inbuf’ by the same amount.
    Decrements ‘*outbytesleft’ and increments ‘*outbuf’ by the same amount. */
-#ifndef LIBICONV_PLUG
 #define iconv libiconv
-#endif
 extern size_t iconv (iconv_t cd, @ICONV_CONST@ char* * inbuf, size_t *inbytesleft, char* * outbuf, size_t *outbytesleft);
 
 /* Frees resources allocated for conversion descriptor ‘cd’. */
-#ifndef LIBICONV_PLUG
 #define iconv_close libiconv_close
-#endif
 extern int iconv_close (iconv_t cd);
 
 
@@ -100,8 +89,6 @@ extern int iconv_close (iconv_t cd);
 }
 #endif
 
-
-#ifndef LIBICONV_PLUG
 
 /* Nonstandard extensions. */
 
@@ -246,8 +233,6 @@ extern void libiconv_set_relocation_prefix (const char *orig_prefix,
 
 #ifdef __cplusplus
 }
-#endif
-
 #endif
 
 
