@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 1999-2003, 2005-2006, 2008 Free Software Foundation, Inc.
+ * Copyright (C) 1999-2024 Free Software Foundation, Inc.
  * This file is part of the GNU LIBICONV Library.
  *
  * The GNU LIBICONV Library is free software; you can redistribute it
@@ -153,8 +153,6 @@ static int unicode_transliterate (conv_t cd, ucs4_t wc,
   return RET_ILUNI;
 }
 
-#ifndef LIBICONV_PLUG
-
 struct uc_to_mb_fallback_locals {
   unsigned char* l_outbuf;
   size_t l_outbytesleft;
@@ -219,9 +217,7 @@ static void mb_to_uc_write_replacement (const unsigned int *buf, size_t buflen,
       if (cd->discard_ilseq) {
         outcount = 0;
         goto outcount_ok;
-      }
-      #ifndef LIBICONV_PLUG
-      else if (cd->fallbacks.uc_to_mb_fallback != NULL) {
+      } else if (cd->fallbacks.uc_to_mb_fallback != NULL) {
         struct uc_to_mb_fallback_locals locals;
         locals.l_outbuf = outptr;
         locals.l_outbytesleft = outleft;
@@ -239,7 +235,6 @@ static void mb_to_uc_write_replacement (const unsigned int *buf, size_t buflen,
         outcount = 0;
         goto outcount_ok;
       }
-      #endif
       outcount = cd->ofuncs.xxx_wctomb(cd,outptr,0xFFFD,outleft);
       if (outcount != RET_ILUNI)
         goto outcount_ok;
@@ -250,10 +245,8 @@ static void mb_to_uc_write_replacement (const unsigned int *buf, size_t buflen,
         plocals->l_errno = E2BIG;
         break;
       }
-      #ifndef LIBICONV_PLUG
       if (cd->hooks.uc_hook)
         (*cd->hooks.uc_hook)(wc, cd->hooks.data);
-      #endif
       if (!(outcount <= outleft)) abort();
       outptr += outcount; outleft -= outcount;
     outcount_zero: ;
@@ -262,8 +255,6 @@ static void mb_to_uc_write_replacement (const unsigned int *buf, size_t buflen,
     plocals->l_outbytesleft = outleft;
   }
 }
-
-#endif /* !LIBICONV_PLUG */
 
 static size_t unicode_loop_convert (iconv_t icd,
                                     const char* * inbuf, size_t *inbytesleft,
@@ -299,9 +290,7 @@ static size_t unicode_loop_convert (iconv_t icd,
               incount += 1; break;
           }
           goto outcount_zero;
-        }
-        #ifndef LIBICONV_PLUG
-        else if (cd->fallbacks.mb_to_uc_fallback != NULL) {
+        } else if (cd->fallbacks.mb_to_uc_fallback != NULL) {
           unsigned int incount2;
           struct mb_to_uc_fallback_locals locals;
           switch (cd->iindex) {
@@ -336,7 +325,6 @@ static size_t unicode_loop_convert (iconv_t icd,
           result += 1;
           goto outcount_zero;
         }
-        #endif
         inptr += incount; inleft -= incount;
         errno = EILSEQ;
         result = -1;
@@ -374,9 +362,7 @@ static size_t unicode_loop_convert (iconv_t icd,
       if (cd->discard_ilseq) {
         outcount = 0;
         goto outcount_ok;
-      }
-      #ifndef LIBICONV_PLUG
-      else if (cd->fallbacks.uc_to_mb_fallback != NULL) {
+      } else if (cd->fallbacks.uc_to_mb_fallback != NULL) {
         struct uc_to_mb_fallback_locals locals;
         locals.l_outbuf = outptr;
         locals.l_outbytesleft = outleft;
@@ -395,7 +381,6 @@ static size_t unicode_loop_convert (iconv_t icd,
         outcount = 0;
         goto outcount_ok;
       }
-      #endif
       outcount = cd->ofuncs.xxx_wctomb(cd,outptr,0xFFFD,outleft);
       if (outcount != RET_ILUNI)
         goto outcount_ok;
@@ -410,10 +395,8 @@ static size_t unicode_loop_convert (iconv_t icd,
         result = -1;
         break;
       }
-      #ifndef LIBICONV_PLUG
       if (cd->hooks.uc_hook)
         (*cd->hooks.uc_hook)(wc, cd->hooks.data);
-      #endif
       if (!(outcount <= outleft)) abort();
       outptr += outcount; outleft -= outcount;
     }
@@ -461,9 +444,7 @@ static size_t unicode_loop_reset (iconv_t icd,
         if (cd->discard_ilseq) {
           outcount = 0;
           goto outcount_ok;
-        }
-        #ifndef LIBICONV_PLUG
-        else if (cd->fallbacks.uc_to_mb_fallback != NULL) {
+        } else if (cd->fallbacks.uc_to_mb_fallback != NULL) {
           struct uc_to_mb_fallback_locals locals;
           locals.l_outbuf = outptr;
           locals.l_outbytesleft = outleft;
@@ -482,7 +463,6 @@ static size_t unicode_loop_reset (iconv_t icd,
           outcount = 0;
           goto outcount_ok;
         }
-        #endif
         outcount = cd->ofuncs.xxx_wctomb(cd,outptr,0xFFFD,outleft);
         if (outcount != RET_ILUNI)
           goto outcount_ok;
@@ -495,10 +475,8 @@ static size_t unicode_loop_reset (iconv_t icd,
           errno = E2BIG;
           return -1;
         }
-        #ifndef LIBICONV_PLUG
         if (cd->hooks.uc_hook)
           (*cd->hooks.uc_hook)(wc, cd->hooks.data);
-        #endif
         if (!(outcount <= outleft)) abort();
         outptr += outcount;
         outleft -= outcount;
