@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2000-2002, 2005-2006, 2008-2009, 2011, 2023 Free Software Foundation, Inc.
+ * Copyright (C) 2000-2024 Free Software Foundation, Inc.
  * This file is part of the GNU LIBICONV Library.
  *
  * The GNU LIBICONV Library is free software; you can redistribute it
@@ -61,8 +61,6 @@ struct wchar_conv_struct {
 #if HAVE_WCRTOMB
 
 /* From wchar_t to anything else. */
-
-#ifndef LIBICONV_PLUG
 
 #if 0
 
@@ -134,8 +132,6 @@ static void wc_to_mb_write_replacement (const char *buf, size_t buflen,
 
 #endif
 
-#endif /* !LIBICONV_PLUG */
-
 static size_t wchar_from_loop_convert (iconv_t icd,
                                        const char* * inbuf, size_t *inbytesleft,
                                        char* * outbuf, size_t *outbytesleft)
@@ -155,9 +151,7 @@ static size_t wchar_from_loop_convert (iconv_t icd,
         /* Invalid input. */
         if (wcd->parent.discard_ilseq) {
           count = 0;
-        }
-        #ifndef LIBICONV_PLUG
-        else if (wcd->parent.fallbacks.wc_to_mb_fallback != NULL) {
+        } else if (wcd->parent.fallbacks.wc_to_mb_fallback != NULL) {
           /* Drop the contents of buf[] accumulated so far, and instead
              pass all queued wide characters to the fallback handler. */
           struct wc_to_mb_fallback_locals locals;
@@ -186,9 +180,7 @@ static size_t wchar_from_loop_convert (iconv_t icd,
           *outbytesleft = locals.l_outbytesleft;
           result += 1;
           break;
-        }
-        #endif
-        else {
+        } else {
           errno = EILSEQ;
           return -1;
         }
@@ -290,8 +282,6 @@ static size_t wchar_from_loop_reset (iconv_t icd,
 
 /* From anything else to wchar_t. */
 
-#ifndef LIBICONV_PLUG
-
 struct mb_to_wc_fallback_locals {
   char* l_outbuf;
   size_t l_outbytesleft;
@@ -317,8 +307,6 @@ static void mb_to_wc_write_replacement (const wchar_t *buf, size_t buflen,
     }
   }
 }
-
-#endif /* !LIBICONV_PLUG */
 
 static size_t wchar_to_loop_convert (iconv_t icd,
                                      const char* * inbuf, size_t *inbytesleft,
@@ -359,9 +347,7 @@ static size_t wchar_to_loop_convert (iconv_t icd,
           if (res == (size_t)(-1)) {
             /* Invalid input. */
             if (wcd->parent.discard_ilseq) {
-            }
-            #ifndef LIBICONV_PLUG
-            else if (wcd->parent.fallbacks.mb_to_wc_fallback != NULL) {
+            } else if (wcd->parent.fallbacks.mb_to_wc_fallback != NULL) {
               /* Drop the contents of buf[] accumulated so far, and instead
                  pass all queued chars to the fallback handler. */
               struct mb_to_wc_fallback_locals locals;
@@ -387,9 +373,7 @@ static size_t wchar_to_loop_convert (iconv_t icd,
               *outbytesleft = locals.l_outbytesleft;
               result += 1;
               break;
-            }
-            #endif
-            else
+            } else
               return -1;
           } else {
             if (*outbytesleft < sizeof(wchar_t)) {
@@ -454,10 +438,8 @@ static size_t wchar_id_loop_convert (iconv_t icd,
     do {
       wchar_t wc = *inptr++;
       *outptr++ = wc;
-      #ifndef LIBICONV_PLUG
       if (cd->hooks.wc_hook)
         (*cd->hooks.wc_hook)(wc, cd->hooks.data);
-      #endif
     } while (--count > 0);
     *inbuf = (const char*) inptr;
     *outbuf = (char*) outptr;
